# reddit-scraper

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  config.example.json  pyproject.toml
reddit_scraper/: __init__.py  base_scraper.py  captcha_solver.py  cli.py  cli_helpers.py  config.py  json_scraper.py  proxy_manager.py  requests_scraper.py  validation.py
tests/: conftest.py  run_tests.py
tests/integration/: test_cli.py
tests/unit/: test_config.py  test_json_scraper.py  test_validation.py
